--- a/EjercicioJS101/tareas.json
+++ b/EjercicioJS101/tareas.json
@@ -50,5 +50,9 @@
     {
         "titulo": "Ver El Señor de los Anillos 3",
         "estado": "Pendiente"
+    },
+    {
+        "titulo": "Ponerme al día con las materias",
+        "estado": "Pendiente"
     }
 ]
